[tool.poetry]
name = "kpcli"
version = "0.4.1"
description = "A simple command line tool to interact with KeePassX databases"
authors = ["Becky Smith <rebkwok@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
kpcli = "kpcli.cli:app"

[tool.poetry.dependencies]
python = ">=3.8"
typer = {version = ">=0.7.0,<0.10", extras = ["all"]}
pykeepass = ">=4.0.3, <4.1"
pyperclip = "^1.8.1"
tableformatter = "^0.1.6"
attrs = ">=22.2.0, <23.2"
cryptography = ">=39.0.1,<41.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2,<7.5"
pytest-cov = ">=4.0.0,<4.2"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
